you need to add the homepage
I remember we had this problem last time also. You will need to add the "homepage" property to package.json like I did here above. You can read more about it here: https://www.pluralsight.com/guides/fixing-broken-relative-links-on-github-pages 

When you have merged my code into yours you just need to pull it on your computer and do yarn deploy again and wait for a few minutes and then it should be fixed (you might need to clear cache or hard-refresh your page to be able to see the changes...

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nonnimaeju5.github.io/Back-End-Rest-API-Front/",
   "name": "mern-app",
   "version": "0.1.0",
   "private": true,
